test/parser/error/err_28_delete_not_var.pl0
program p; 
const c:=1; 
begin 
delete(c) 
end 